--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +15,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root{
+  height: 100vh;
+  width: 100%;
+}
+
+.container-center{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.flex{
+  display: flex;
+}
+
+.flex-center{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.flex-column{
+  display: flex;
+  flex-direction: column;
+}
+
